restricting values of order.state field, creating dropdown; WIP

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -55,8 +55,12 @@
     <%= f.text_field :city, required: true, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :state %>
-    <%= f.text_field :state, required: true, class: 'form-control' %>
+    <%= f.label :state, id: "state-label" %>
+    <%= f.select :state, required: true, include_blank: true, class: 'form-control' do %>
+      <% Order::US_STATES.each do |full_name, abbrev| %>
+        <%= content_tag :option, full_name, value: abbrev%>
+      <% end %>
+    <% end %>
   </div>
   <div class="form-group">
     <%= f.label :mailing_zip, "Zip code" %>
@@ -73,9 +77,8 @@
     <%= f.text_field :cc_number, required: true, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :cc_expiration, "Credit card expiration date", id: "cc_exp_label" %>
+    <%= f.label :cc_expiration, "Credit card expiration date", id: "cc-exp-label" %>
     <%= f.date_select :cc_expiration, use_month_numbers: true, use_two_digit_numbers: true, order: [:month, :year], start_year: Date.today.year, start_month: Date.today.month, prompt: true, required: true, class: 'form-control' %>
-    <%# f.date_field :cc_expiration, min: Date.today, required: true, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :cc_cvv, "CVV (3 digit code on back of card)" %>
