WIP order fulfillment page. Set up order link, product link, quantity, subtotal, and date placed information. Ugly but works.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html {
+  background: #ddd;
+}
+
 body {
   max-width: 970px;
   margin: auto;
