--- a/app/views/users/_nav.html.erb
+++ b/app/views/users/_nav.html.erb
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to("Home", user_path) %></li>
         <li><%= link_to("Products", user_products_path(@user.id)) %></li>
-        <li><%= link_to("Orders") %></li>
+        <li><%= link_to("Orders", order_fulfillment_path) %></li>
         <li><%= link_to("Go Shopping", products_path) %></li>
       </ul>
   </div>
