--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -85,7 +85,7 @@
   </div>
   <div class="form-group">
     <%= f.label :cc_expiration, "Credit card expiration date", id: "cc-exp-label" %>
-    <%= f.date_select :cc_expiration, use_month_numbers: true, use_two_digit_numbers: true, order: [:month, :year], start_year: Date.today.year, start_month: Date.today.month, prompt: true, required: true, class: 'form-control' %>
+    <%= f.date_select :cc_expiration, use_month_numbers: true, use_two_digit_numbers: true, order: [:month, :year], start_year: Date.today.year, start_month: Date.today.month, end_year: Date.today.year+10, prompt: true, required: true, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :cc_cvv, "CVV (3 digit code on back of card)" %>
