Order fulfillment displays user's total rev.

--- a/app/views/orders/fulfillment.html.erb
+++ b/app/views/orders/fulfillment.html.erb
@@ -1,5 +1,5 @@
 <!-- On the order fulfillment page:
-  (____) Total Revenue
+  (DONE) Total Revenue
   (____) Total Revenue by status
   (____) Total number of orders by status
   (____) Filter orders displayed by status
@@ -11,29 +11,48 @@
     (____) Link to transition the order item to marked as shipped
     (DONE) The current status of the order ("pending", "paid", "complete", "cancelled") -->
 
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        </div>
+        <div>
+          <ul class="nav navbar-nav">
+            <li><%= link_to("Home", user_path) %></li>
+            <li><%= link_to("Products", user_products_path(@user.id)) %></li>
+            <li><%= link_to("Orders", order_fulfillment_path) %></li>
+            <li><%= link_to "Create a new Product", new_user_product_path(@user.id), method: :get %></li>
+            <li><%= link_to("Go Shopping", products_path) %></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to("Edit Account", edit_user_path) %></li>
+          </ul>
+      </div>
+    </nav>
+
+
 <h2>Order Fulfillment</h2>
+<p>
+  Total Revenue: <%= readable_price(@total_revenue) %>
+</p>
 
-Total Revenue: <%= readable_price(Product.where(user_id: @user.id).sum(:price)) %>
-<%=  %>
-
+------------------------------
 <% @orders.each do |order| %>
   <p>
     <%= link_to "Order #{order.id}", user_order_path(user_id: @user.id), class: "btn btn-default" %>
   </p>
   <p>
-    Product: <%= link_to Product.find_by(order.product_id).name, product_path, class: "btn btn-default" %>
+    Product: <%= link_to (Product.find(order.product_id).name), product_path, class: "btn btn-default" %>
   </p>
   <p>
     Quantity: <%= order.quantity %>
   </p>
   <p>
-    Item Total: <%= readable_price((Product.find_by(order.product_id).price) * order.quantity) %>
+    Item Total: <%= readable_price(order.item_total) %>
   </p>
   <p>
     Date Placed: <%= readable_date(order.created_at) %>
   </p>
   <p>
-    Status: <%= Order.find_by(order.order_id).status %>
+    Status: <%= Order.find(order.order_id).status %>
   </p>
     ------------------------------
     <br>
