--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
       </h1>
 
       <% if @user %>
-        <%= link_to 'My Account', user_path(@user), class: "btn btn-primary" %>
+        <%= link_to 'My Account', user_path(@user.id), class: "btn btn-primary" %>
       <% end %>
 
       <%= link_to 'Cart', cart_path, class: "btn btn-primary"%>
