--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
   </div>
 <% end %>
 
-<%= form_for @user, html: { class: "form" } do |f| %>
+<%= form_for @new_user, html: { class: "form" } do |f| %>
   <div class="form-group">
     <%= f.label :username %>
     <%= f.text_field :username, required: true, autofocus: true, class: "form-control" %>
