WIP order fulfillment. Still needs status filtering and toggling.

--- a/app/views/orders/fulfillment.html.erb
+++ b/app/views/orders/fulfillment.html.erb
@@ -1,5 +1,5 @@
 <!-- On the order fulfillment page:
-  (DONE) Total Revenue
+  (DONE) Total Revenue MWAHAHA
   (____) Total Revenue by status
   (____) Total number of orders by status
   (____) Filter orders displayed by status
