--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -12,8 +12,14 @@
   </div>
 <% end %>
 
+<% if flash[:errors] %>
+  <div>
+    <p class="alert alert-danger"><%= flash[:errors] %></p>
+  </div>
+<% end %>
+
 <!-- move this logic "@order_items.count > 0" to view helper? -->
-<% if @order_items.count > 0 %>
+<% if @order.order_items.count > 0 %>
   <table class="table">
     <tr>
       <th>Item</th>
@@ -22,7 +28,7 @@
       <th>Item total</th>
       <th></th>
     </tr>
-    <% @order_items.each do |order_item| %>
+    <% @order.order_items.each do |order_item| %>
       <% item_price = order_item.product.price %>
       <tr>
         <td><%= order_item.product.name %></td>
