working on cart error; WIP

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,9 +20,6 @@
 
       <%= link_to 'Cart', cart_path, class: "btn btn-primary"%>
 
-  <!-- <p>Order_id is: <%# session[:order_id] ? session[:order_id] : "none set" %></p> -->
-
-
+  <p>Order_id is: <%= session[:order_id] ? session[:order_id] : "none set" %></p>
 
 </div>
-
