--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,5 +21,6 @@
       <%= link_to 'Cart', cart_path, class: "btn btn-primary"%>
 
   <p>Order_id is: <%= session[:order_id] ? session[:order_id] : "none set" %></p>
+  <p>Logged-in user is: <%= @user ? @user.username : "none" %></p>
 
 </div>
