--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,12 +20,12 @@
 
   <div class="form-group">
     <%= f.label :password %>
-    <%= f.password_field :password, class: "form-control" %>
+    <%= f.password_field :password %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confriamtion, class: "form-control" %>
+    <%= f.password_field :password_confriamtion %>
   </div>
 
   <%= f.submit "Update", class: "btn btn-primary" %>
