styled submit button

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -95,5 +95,5 @@
     <%= f.label :billing_zip, "Billing zip code" %>
     <%= f.text_field :billing_zip, maxlength: 5, required: true, class: 'form-control' %>
   </div>
-    <%= f.submit "Place order" %>
+    <%= f.submit "Place order", class: 'btn btn-danger btn-lg'%>
 <% end %>
