fixed authenticated usr bug; users can now only view and edit their own products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
       <%= render partial: 'shared/header' %>
 
+      <% if @user %>
+        <%= render "shared/nav" %>
+      <% end %>
       <div class="row">
         <div class="col-lg-12">
 
