--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -31,7 +31,7 @@
     <% @order.order_items.each do |order_item| %>
       <% unit_price = order_item.product.price %>
       <tr>
-        <td><%= order_item.product.name %></td>
+        <td><%= link_to order_item.product.name, product_path(order_item.product) %></td>
         <td><%= readable_price(unit_price) %></td>
         <td>
           <%= form_for order_item, url: order_item_path(order_item), method: :put do |f| %>
