--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to("My Account", user_path(@user.id)) %></li>
         <li><%= link_to("Products", user_products_path(@user.id)) %></li>
-        <li><%= link_to("Orders") %></li>
+        <li><%= link_to("Orders", order_fulfillment_path(@user.id)) %></li>
         <li><%= link_to("Create a new Product", new_user_product_path(@user.id), method: :get) %></li>
         <li><%= link_to("Go Shopping", root_path) %></li>
         <!-- <li><%= link_to('Cart', cart_path) %></li> -->
