--- a/app/views/products/merchant_index.html.erb
+++ b/app/views/products/merchant_index.html.erb
@@ -1,26 +1,29 @@
-<h1>All Products for <%= @merchant.username %></h1> 
+<h1>All Products for <%= @merchant.username %></h1>
 <div class = "container-fluid">
   <div class ="row">
-    <div class = "col-sm-4">
+    <div class = "col-sm-3">
       <h1>Name</h1>
     </div>
-    <div class = "col-sm-4">
+    <div class = "col-sm-3">
       <h1>Photo</h1>
     </div>
-    <div class = "col-sm-4">
+    <div class = "col-sm-3">
       <h1>Price</h1>
     </div>
   </div>
   <% @products.each do |product| %>
     <div class="row">
-      <div class = "col-sm-4">
+      <div class = "col-sm-3">
         <p><%= link_to "#{product.name}", product_path(product.id) %></p>
       </div>
-      <div class = "col-sm-4">
+      <div class = "col-sm-3">
         <p><%= image_tag("#{product.photo_url}", class: "photo") %></p>
       </div>
-      <div class = "col-sm-4">
+      <div class = "col-sm-3">
         <p><%= readable_price(product.price) %></p>
+      </div>
+      <div class = "col-sm-3">
+        <p><%= link_to "Edit", edit_product_path(product.id) %></p>
       </div>
     </div>
   <% end %>
