--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -72,24 +72,20 @@
       <p><%= active_text(@product) %>
       <%= link_to 'Toggle Active', toggle_active_path(@product), method: :put, class: "btn btn-warning" %></p>
       
-      <!-- make below link a form with a dropdown of possible categories -->
-      <p><%= form_for [@product, @product_category], html: { class: "form" } do |f| %>
-      <div class="form-group inline-form">
-        <%= f.select (:category_id), class: "form-control" do %>
-          <% Category.all.each do |category| %>
-            <%= content_tag(:option, category.name, value: category.id)%>
+      <%= form_for [@product, @product_category], html: { class: "form" } do |f| %>
+        <div class="form-group inline-form">
+          <%= f.select (:category_id), class: "form-control" do %>
+            <% Category.all.each do |category| %>
+              <%= content_tag(:option, category.name, value: category.id)%>
+            <% end %>
           <% end %>
-        <% end %>
-      </div>
-
+        </div>
 
         <%= f.submit "Add Category", class: "btn btn-primary" %>
       <% end %>
 
       <!-- or a set of checkboxes with the current category(ies) already checked -->
-      <!-- and a button to create a new category, that redirects back to this page -->
-      <%# link_to 'Create a new category', new_product_category_path(@product) %>
-
+      <%= link_to 'Create a new category', new_category_path, class: "btn btn-default" %>
     </div>
   </div>
 <% end %>
