--- a/app/views/orders/fulfillment.html.erb
+++ b/app/views/orders/fulfillment.html.erb
@@ -17,60 +17,110 @@
 
 <h2>Order Fulfillment</h2>
 <p>
-  Total Revenue: <%= readable_price(@total_revenue) %>
+  <%= form_tag order_status_path, method: "get" do %>
+    <div class="form-group inline-form">
+      <%= select_tag "order", options_for_select([["Pending", "pending"], ["Paid", "paid"], ["Complete", "complete"], ["Cancelled", "cancelled"]]), include_blank: "Filter by...", class: "form-control fit-width" %>
+    </div>
+    <%= submit_tag "Filter by Status", class: "btn btn-default" %>
+  <% end %>
 </p>
 <p>
-  Pending Orders: <%= pending_orders %>
-</p>
-<p>
-  Pending Order Revenue: <%= readable_price(pending_order_revenue) %>
-</p>
-<p>
-  Paid Orders: <%= paid_orders %>
-</p>
-<p>
-  Paid Order Revenue: <%= readable_price(paid_order_revenue) %>
-</p>
-<p>
-  Complete Orders: <%= complete_orders %>
-</p>
-<p>
-  Complete Order Revenue: <%= readable_price(complete_order_revenue) %>
-</p>
-<p>
-  Cancelled Orders: <%= cancelled_orders %>
-</p>
-<p>
-  Cancelled Order Revenue: <%= readable_price(cancelled_order_revenue) %>
+  <%= link_to "See All Orders", order_fulfillment_path, class: "btn btn-default" %>
 </p>
 
-------------------------------
-<% @order_items.each do |order_item| %>
+
+<% if @filtered_order_items == nil %>
+
   <p>
-    <%= link_to "Order #{order_item.id}", user_order_path(user_id: @user.id), class: "btn btn-default" %>
+    Total Revenue: <%= readable_price(@total_revenue) %>
   </p>
   <p>
-    Product: <%= link_to order_item.product.name, product_path, class: "btn btn-default" %>
+    Pending Orders: <%= pending_orders %>
   </p>
   <p>
-    Quantity: <%= order_item.quantity %>
+    Pending Order Revenue: <%= readable_price(pending_order_revenue) %>
   </p>
   <p>
-    Item Total: <%= readable_price(order_item.item_total) %>
+    Paid Orders: <%= paid_orders %>
   </p>
   <p>
-    Date Placed: <%= readable_date(order_item.created_at) %>
+    Paid Order Revenue: <%= readable_price(paid_order_revenue) %>
   </p>
   <p>
-    Payment Status: <%= order_item.order.status.capitalize %>
+    Complete Orders: <%= complete_orders %>
   </p>
   <p>
-    Shipping Status: <%= frendly_shipped_status(order_item.order.shipped) %>
+    Complete Order Revenue: <%= readable_price(complete_order_revenue) %>
   </p>
-  <% unless order_item.order.shipped == true %>
-    <%= link_to "Mark Shipped", mark_shipped_path(@user, order_id: order_item.order.id), method: :put, class: "btn btn-warning" %></p>
+  <p>
+    Cancelled Orders: <%= cancelled_orders %>
+  </p>
+  <p>
+    Cancelled Order Revenue: <%= readable_price(cancelled_order_revenue) %>
+  </p>
+
+  ------------------------------
+  <% @order_items.each do |order_item| %>
+    <p>
+      <%= link_to "Order #{order_item.id}", user_order_path(user_id: @user.id), class: "btn btn-default" %>
+    </p>
+    <p>
+      Product: <%= link_to order_item.product.name, product_path, class: "btn btn-default" %>
+    </p>
+    <p>
+      Quantity: <%= order_item.quantity %>
+    </p>
+    <p>
+      Item Total: <%= readable_price(order_item.item_total) %>
+    </p>
+    <p>
+      Date Placed: <%= readable_date(order_item.created_at) %>
+    </p>
+    <p>
+      Payment Status: <%= order_item.order.status.capitalize %>
+    </p>
+    <p>
+      Shipping Status: <%= frendly_shipped_status(order_item.order.shipped) %>
+    </p>
+    <% unless order_item.order.shipped == true %>
+      <%= link_to "Mark Shipped", mark_shipped_path(@user, order_id: order_item.order.id), method: :put, class: "btn btn-warning" %></p>
+    <% end %>
+      ------------------------------
+      <br>
+      <br>
   <% end %>
-    ------------------------------
-    <br>
-    <br>
+
+<% else %>
+
+<h3>Filtered by <%= params[:order].capitalize %> Orders</h3>
+  <% @filtered_order_items.each do |order_item| %>
+    <p>
+      <%= link_to "Order #{order_item.id}", user_order_path(user_id: @user.id), class: "btn btn-default" %>
+    </p>
+    <p>
+      Product: <%= link_to order_item.product.name, product_path, class: "btn btn-default" %>
+    </p>
+    <p>
+      Quantity: <%= order_item.quantity %>
+    </p>
+    <p>
+      Item Total: <%= readable_price(order_item.item_total) %>
+    </p>
+    <p>
+      Date Placed: <%= readable_date(order_item.created_at) %>
+    </p>
+    <p>
+      Payment Status: <%= order_item.order.status.capitalize %>
+    </p>
+    <p>
+      Shipping Status: <%= frendly_shipped_status(order_item.order.shipped) %>
+    </p>
+    <% unless order_item.order.shipped == true %>
+      <%= link_to "Mark Shipped", mark_shipped_path(@user, order_id: order_item.order.id), method: :put, class: "btn btn-warning" %></p>
+    <% end %>
+      ------------------------------
+      <br>
+      <br>
+  <% end %>
+
 <% end %>
