--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_area :name %>
 
   <%= f.label :price %>
-  <%= f.text_area :price %>
+  <%= f.text_field :price, placeholder: "$0.00" %>
 
   <%= f.label :description %>
   <%= f.text_area :description %>
