--- a/app/views/product_categories/new_category.html.erb
+++ b/app/views/product_categories/new_category.html.erb
@@ -1,3 +1,7 @@
+<% unless flash[:errors].nil? %>
+  <%= render partial: "shared/errors", locals: {instance: @category} %>
+<% end %>
+
 <h1>Add a New Category</h1>
 
 <%= form_for @category, url: category_path, method: :post do |f| %>
