fixed order numbers on show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
     <% @recent_sales.each do |x| %>
       <tr>
         <td>
-          <%= link_to("#{x.id}", user_order_path(@user.id, x.order_id)) %>
+          <%= link_to("#{x.order_id}", user_order_path(@user.id, x.order_id)) %>
         </td>
         <td>
           <%= link_to("#{x.product.name}", user_product_path(@user.id, x.product.id)) %>
