--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <h3>Sales to Date: $<%= @total_sales %></h3>
 <h3>Total Items Sold: <%= @quantity_sold %></h3>
-<h3>Recent Sales</h3>
+<h3>Recent Orders</h3>
 <table class="table">
   <thead>
     <tr>
