category name is unique

--- a/app/views/products/merchant_index.html.erb
+++ b/app/views/products/merchant_index.html.erb
@@ -6,6 +6,14 @@
   </div>
 <% end %>
 
+<% unless flash[:success].nil? %>
+  <div>
+    <p class="alert alert-success">
+      <%= flash[:success] %>
+    </p>
+  </div>
+<% end %>
+
 <% unless flash[:failed].nil? %>
   <%= render partial: "shared/errors", locals: {instance: @products} %>
 <% end %>
