updated cart & confirmation to use #subtotal & #final_total

--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -47,7 +47,7 @@
       <td></td>
       <td></td>
       <th>Order total:</td>
-      <th><%= readable_price(@order.total) %></td>
+      <th><%= readable_price(@order.subtotal) %></td>
       <td></td>
     </tr>
   </table>
