--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,33 +15,47 @@
 <% end %>
 
 
-<%= form_for @product, url: user_products_path(@merchant.id), method: :post do |f| %>
-  <%= f.label :name %>
-  <%= f.text_area :name %>
+<%= form_for @product, url: user_products_path(@merchant.id), method: :post, html: { class: "form" } do |f| %>
 
-  <%= f.label :price %>
-  <%= f.text_field :price, placeholder: "$0.00" %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
 
-  <%= f.label :description %>
-  <%= f.text_area :description %>
+  <div class="form-group">
+    <%= f.label :price %>
+    <%= f.text_field :price, placeholder: "$0.00" %>
+  </div>
 
-  <%= f.label :photo_url %>
-  <%= f.text_area :photo_url %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+  </div>
 
-  <%= f.label :stock %>
-  <%= f.text_area :stock %>
+  <div class="form-group">
+    <%= f.label :photo_url %>
+    <%= f.text_field :photo_url %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :stock %>
+    <%= f.number_field :stock, step: 1, value: 0 %>
+  </div>
 
   <%= f.fields_for :product_categories do |pc| %>
-
-    <%= pc.collection_select(:category_id, Category.all, :id, :name ) %>
-    <%= pc.hidden_field :product_id, value: @product_id %>
+    <div class="form-group">
+      <%= pc.collection_select(:category_id, Category.all, :id, :name ) %>
+      <%= pc.hidden_field :product_id, value: @product_id %>
+    </div>
   <% end %> 
 
-  <%= f.hidden_field :active, value: true %>
-  <%= f.hidden_field :user_id, value: params[:user_id] %>
+  <div class="form-group">
+    <%= f.hidden_field :active, value: true %>
+    <%= f.hidden_field :user_id, value: params[:user_id] %>
+  </div>
 
-  <%= f.submit %>
+  <%= f.submit "Create a Product", class: "btn btn-default" %>
 
 <% end %>
 
-<%= link_to "Create a new Category", new_category_path, method: :get %>
+<%= link_to "Create a new Category", new_category_path, method: :get, class: "btn btn-default" %>
