--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,12 @@ select {
 .navbar-right{
   margin-right: 5px;
 }
+
+.navbar-default{
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  color: #fff;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #fff;
+}
