--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,9 @@
-<h2>
-  <%= @message + @user.username %>!
-</h2>
+<h4 class = "label label-default">Sales to Date: $<%= @total_sales %></h4>
+<h4 class = "label label-default">Total Items Sold: <%= @quantity_sold %></h4>
+<br>
+<br>
 
-<h3>Sales to Date: $<%= @total_sales %></h3>
-<h3>Total Items Sold: <%= @quantity_sold %></h3>
-<h3>Recent Orders</h3>
+<h4>Recent Orders:</h4>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -23,7 +22,6 @@
     </tr>
   </thead>
   <tbody>
-    #array of order items
     <% @recent_sales.each do |x| %>
       <tr>
         <td>
@@ -38,7 +36,6 @@
         <td>
           <%= x.order.status %>
         </td>
-
       </tr>
     <% end %>
   </tbody>
